--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,10 +1,8 @@
 <div th:fragment="header" class="container-fluid px-0">
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container-fluid d-flex justify-content-between align-items-center px-3">
-            <p class="text-white m-0">
-                <span th:text="${currentUser.email}" class="fw-bold">Email</span>
-                <span>with roles: </span>
-                <span th:each="role : ${currentUser.roles}" th:text="${role.name}" class="fw-normal me-2">Role</span>
+            <p id="userInfoHeader" class="text-white m-0">
+
             </p>
 
             <form th:action="@{/logout}" method="post">
