--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,34 +1,45 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+
 <head>
-    <title>Home</title>
+    <meta charset="UTF-8">
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+
+    <title>title</title>
+
     <!-- WebJars Bootstrap CSS -->
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.1/css/bootstrap.min.css}">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/css/my_styles.css">
 </head>
 <body>
 
-<div class="container mt-5">
-    <h1 class="text-center mb-4">Welcome to Index PAGE!</h1>
-    <div class="row">
-        <div class="col-md-6 mb-3">
-            <div class="card">
-                <div class="card-body text-center">
-                    <a th:href="@{/register}" class="btn btn-primary w-100">Registration</a>
-                </div>
-            </div>
+<!--main template-->
+<div class="d-flex flex-column bg-light" >
+
+    <!-- Вставка фрагмента шапки -->
+    <header th:insert="fragments/header :: header"></header>
+
+    <div class="d-flex flex-row">
+        <!-- Вставка фрагмента навигации по ролям -->
+        <aside class="sidebar bg-white pt-4" th:insert="fragments/sidebar :: sidebar"></aside>
+
+        <!-- Фрагмент панели администратора -->
+        <div id="admin-panel" class="flex-grow-1" style="display: none;">
+            <div th:insert="fragments/admin-panel :: admin-panel"></div>
         </div>
-        <div class="col-md-6 mb-3">
-            <div class="card">
-                <div class="card-body text-center">
-                    <a th:href="@{/login}" class="btn btn-success w-100">Login</a>
-                </div>
-            </div>
+
+        <!-- Фрагмент информации пользователя -->
+        <div id="user-info" class="flex-grow-1" style="display: none;">
+            <div th:insert="fragments/user-information :: user-info"></div>
         </div>
     </div>
-</div>
-
+</div >
 <!-- WebJars Bootstrap JS -->
 <script th:src="@{/webjars/bootstrap/5.3.1/js/bootstrap.bundle.min.js}"></script>
-</body>
 
+<script th:src="@{/js/rest-admin.js}"></script>
+
+</body>
 </html>
